--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
           <ul>
             <li class="my-2 md:my-4">
-              <a href="Pages/contact.html">📚 My Personal Library</a>
+              <a href="Pages/library.html">📚 My Personal Library</a>
             </li>
             <li class="my-2 md:my-4">
-              <a href="Pages/contact.html">🖥️ Programs I use and recommend</a>
+              <a href="Pages/programs.html">🖥️ Programs I use and recommend</a>
             </li>
             <li class="my-2 md:my-4">
-              <a href="Pages/contact.html">📜 Blog Articles and Other Writings</a>
+              <a href="Pages/Blog.html">📜 Blog Articles and Other Writings</a>
             </li>
             <li class="my-2 md:my-4">
               <a href="Pages/contact.html">📧 Contact</a>
