--- a/Pages/programs.html
+++ b/Pages/programs.html
@@ -27,7 +27,7 @@
             </figure> 
 
 
-             <h1> NASSIM TO LAZY TO MAKE THIS PAGE </h1>
+             <h1> NASSIM LAZY TO MAKE THIS PAGE </h1>
              
 
 
